# advent_code_puzzles

./: README.md  puzzle_1.py  puzzle_25.py
puzzle1/: CMakeLists.txt  puzzle.c  puzzle.cpp  puzzle.py
puzzle2/: puzzle.py
puzzle25/: puzzle.py
puzzle3/: puzzle.py
puzzle4/: puzzle.py
